v1.1.0 - new Release - Change JVM to openJDK 11 LTS - Different Salutation Values - Empty Salutation could be announces with SALUTATION.NOTHING. The Serialisation returns an empty string - update jackson-databind (Core) from 2.9.10.7 to 2.12.5